Prevent logo text from being squashed

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -56,6 +56,7 @@ div#footer-logo-container
 {
     color: $warm-light-grey;
     text-align: center;
+    flex-shrink: 0;
 }
 
 div#footer-logo-container > span
